--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "facerecognitionbrain",
+  "homepage": "https://bdang160.github.io/face-recognition/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
